--- a/Projekt Europaquiz/Projekt Europaquiz.csproj
+++ b/Projekt Europaquiz/Projekt Europaquiz.csproj
@@ -56,12 +56,21 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Optionen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Optionen.Designer.cs">
+      <DependentUpon>Optionen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Land.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="svgparser.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Optionen.resx">
+      <DependentUpon>Optionen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
